name:                ln-ui-ghcjs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/ln-ui-ghcjs#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ln-ui-ghcjs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , react-flux == 1.1.1
                     , ln-ui-reactflux
  if impl(ghcjs)
      build-depends: ghcjs-base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cpp-options:         -DGHCJS_BROWSER
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/ln-ui-ghcjs
